Fixed spacing on full width blocks.

--- a/wp-content/themes/hoverboard/parts/the-content/the-content.css
+++ b/wp-content/themes/hoverboard/parts/the-content/the-content.css
@@ -9,7 +9,7 @@
 		}
 	}
 
-	> * {
+	> :where(:not(.is-layout-constrained)) {
 		margin-block-start: var(--wp--preset--spacing--40);
 		margin-block-end: 0;
 	}
@@ -24,14 +24,12 @@
 	.alignleft {
 		float: left;
 		margin-inline-start: 0;
-		/* TODO: variable? */
-		margin-inline-end: 2em;
+		margin-inline-end: var(--wp--preset--spacing--40);
 	}
 
 	.alignright {
 		float: right;
-		/* TODO: variable? */
-		margin-inline-start: 2em;
+		margin-inline-start: var(--wp--preset--spacing--40);
 		margin-inline-end: 0;
 	}
 
